<resources>
    <string name="app_name">АРМ регистратуры</string>
    <string name="diagnosis">Диагноз:</string>
    <string name="enter_name">ФИО</string>
    <string name="enter_date">Дата поступления</string>
    <string name="date_of_discharge">Дата выписки</string>
    <string name="text_diagnosis">Диагноз</string>
    <string name="enter_doctor">Лечащий врач</string>
    <string name="enter_card_link">Медицинская карта</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="lastname">Отчество</string>
    <string name="delete">Удалить</string>
    <string name="update_data">Обновить данные</string>
    <string name="save">Сохранить</string>
    <string name="data_is_deleted">Карточка пациента удалена</string>
    <string name="add_data">Добавьте карточку пациента</string>
</resources>